# cbindgen

./: Cargo.toml
src/bindgen/: annotation.rs  dependency_graph.rs  library.rs  mangle.rs  mod.rs  rust_lib.rs  utilities.rs  writer.rs
src/bindgen/ir/: alias.rs  documentation.rs  enumeration.rs  function.rs  mod.rs  object.rs  opaque.rs  structure.rs  ty.rs
