[package]
name = "cbindgen"
version = "0.1.20"
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>",
           "Kartikaya Gupta <kats@mozilla.com>",
           "Ryan Hunt <rhunt@eqrion.net>"]
license = "MPL-2.0"
description = "A tool for generating C bindings to Rust code."
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
repository = "https://github.com/rlhunt/cbindgen/"
exclude = ["run-tests.py", "compile-tests/**"]

[badges]
travis-ci = { repository = "rlhunt/cbindgen" }

[dependencies]
clap = "2"
log = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempdir = "0.3"
toml = "0.5"
petgraph = "0.4"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]

[[bin]]
name = "cbindgen"
path = "src/main.rs"

[lib]
name = "cbindgen"
path = "src/lib.rs"
